# MastersThesis

./: LICENSE  README.md
Main_Program_updated/: ELfig9NApy.mat  Installation with quoFEM.txt  TUST comparison.py  createFit_Cvals.m
Main_Program_updated/ASREpy-main/ASREpy/: ASRE_Timoshenko_model_ps.py  __init__.py
Main_Program_updated/ASREpy-main/ASREpy/ASREcpp/src/: ASRElibTimoBeam.cpp  ASRElibTimoBeam_ps.cpp  CMakeLists.txt
Main_Program_updated/ASREpy-main/ASREpy/ASREcpp/src/inc/: ASRE_Timo_functions.h  ASRE_Timo_functions_ps.h
Main_Program_updated/ASREpy-main/Examples/EquivalentBeam/: EquivalentBeamVerification.ipynb
Main_Program_updated/ASREpy-main/Examples/compare_timoshenko_vs_2DFrame/: Fig5Compare.py  compare.ipynb  test_stiffness.ipynb
Main_Program_updated/ASREpy-main/Examples/compare_timoshenko_vs_2DFrame/FunctionScripts/: LoadPackages.py
Main_Program_updated/ASREpy-main/Examples/compare_timoshenko_vs_2DFrame/Results/: Plot7apy.mat  READ.ME.txt  fig7A.mat
Main_Program_updated/Data/IN/: IN22_WallDeflection.csv  IN26_WallDeflection.csv
Main_Program_updated/Data/Settlement/: Settlement_Measurements.csv
Main_Program_updated/Framework/: Input_General_TUST.py  Input_UA_TUST.py  Input_general.py  Input_uncertainty_analysis.py  greenfield_SA_3D_8.mat  greenfield_SA_3D_amh.mat  greenfield_SA_8.mat  greenfield_SA_amh.mat  main.py  model_EL_da18p0.mat  results.out  testFile.py  test_greenfield_3D_DUMMY.py
Main_Program_updated/Framework/FunctionScripts/: FEA_LTS.py  example_wall_data.mat  greenfield_3D_DMM.py  localStiff3D.py  prepare_greenfield_disp_file.py  strain_analysis.py  strain_cal.py
Main_Program_updated/Framework/FunctionScripts3D/: __init__.py  wall_deflection_3D.py
Main_Program_updated/FunctionScripts/: localStiff3D.py  prepare_greenfield_disp_file.py
Main_Program_updated/Main_ASREp/: Input_General_TUST.py  Input_UA_TUST.py  Input_general.py  Input_uncertainty_analysis.py  Output_uncertainty_analysis.py  TUST comparison.py  main.py  main_iteration_enabled.py  results.out
Main_Program_updated/Main_ASREp/FunctionScripts/: FEA_LTS.py  Wall_deflection_v_38.py  localStiff3D.py  plotFunctions.py  strain_analysis.py  strain_cal.py
Main_Program_updated/Main_ASREpy/: FEA_LTS.py  Input_general.py  Input_uncertainty_analysis.py  Run_main.bat  Wall_deflection_v_38.py  disp.npy  localStiff3D.py  main.py  main_Jinyan_quoFEM.py  prepare_greenfield_disp.py  results.out  strain_analysis_greenfield.py
